# agentic-rag-document-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  run.py
backend/: __init__.py  agent_workflow.py  api.py  document_processing.py  log_config.py  openai_client.py  rag_service.py  settings.py
backend/agents/: __init__.py  relevance.py  research.py  verification.py
frontend/: __init__.py  app.py  client.py  config.py  launcher.py
