[tool.poetry]
name = "agentic-rag-app"
version = "0.1.0"
description = "Agentic RAG app with a separated FastAPI backend and streamlit frontend."
authors = ["Artur-Gar <artur.gar.fin@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "frontend" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic-settings = "^2.7.1"

[tool.poetry.group.backend]
optional = true

[tool.poetry.group.backend.dependencies]
chromadb = "^0.6.3"
docling = "^2.15.0"
fastapi = "^0.115.7"
langchain = "^0.3.16"
langchain-community = "^0.3.16"
langchain-core = "^0.3.32"
langchain-openai = "^0.3.2"
langchain-text-splitters = "^0.3.5"
langgraph = "^0.2.68"
loguru = "^0.7.3"
openai = "^1.60.2"
python-multipart = "^0.0.20"
rank-bm25 = "^0.2.2"
uvicorn = { version = "^0.34.0", extras = ["standard"] }

[tool.poetry.group.frontend]
optional = true

[tool.poetry.group.frontend.dependencies]
httpx = "^0.28.1"
streamlit = "^1.56.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
ipykernel = "^7.2.0"
jupyter = "^1.1.1"

[tool.poetry.scripts]
agentic-rag = "run:main"
backend = "backend.api:run"
frontend = "frontend.launcher:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
